[gd_scene load_steps=7 format=3 uid="uid://mmq7d6i1fgjc"]

[ext_resource type="Script" path="res://Scripts/mob_behaviour.gd" id="1_pu2pm"]
[ext_resource type="PackedScene" uid="uid://bi3f26bls5dm3" path="res://Scenes/Assets/Mobs/ranged_projectile.tscn" id="2_ioq7i"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4okeo"]
height = 1.25
radius = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lflvg"]
radius = 8.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2fcc8"]
height = 0.7
radius = 1.5

[sub_resource type="Curve3D" id="Curve3D_ti6jn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 2, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 0, 1, -1),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Minion" type="CharacterBody3D" node_paths=PackedStringArray("health_label", "hit_area3D")]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_pu2pm")
health_label = NodePath("HealthLabel")
hit_area3D = NodePath("HitArea3D")
projectile_arrow = ExtResource("2_ioq7i")
movement_speed = 3.5
look_ahead = 1.5
num_rays = 19
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource("CylinderShape3D_4okeo")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
max_speed = 15.0

[node name="DetectionArea3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0.5)
shape = SubResource("CylinderShape3D_lflvg")

[node name="HitArea3D" type="Area3D" parent="."]

[node name="CollisionShape" type="CollisionShape3D" parent="HitArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CylinderShape3D_2fcc8")

[node name="HealthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
billboard = 1
font_size = 60

[node name="NavPathTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Path3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_ti6jn")

[connection signal="link_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_link_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="DetectionArea3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="DetectionArea3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="HitArea3D" to="." method="_on_hit_area_3d_body_entered"]
[connection signal="body_exited" from="HitArea3D" to="." method="_on_hit_area_3d_body_exited"]
[connection signal="timeout" from="NavPathTimer" to="." method="_on_nav_path_timer_timeout"]
